src/components/Header/Header.module.css
/*===== Welcome gradient section =====*/
.welcome {
    position: relative;
    max-height: 640px;
}

.welcome_photo {
    width: 50%;
}

.welcome__gradient {
    background: var(--main-background);
    background: var(--main-gradient);
    display: flex;
    min-width: 50%;
    align-items: center;
    justify-content: space-evenly;
    max-height: 87%;

}

.hero {
    max-width: 30%;
    height: auto;
    margin: var(--margin-24px);
}

.welcome_description {
    color: var(--main-color);
    font-size: var(--font-normal);
    margin: var(--margin-24px);

}

.contactMe {
    padding: 0 10px;
    max-width: max-content;
    border: 3px solid var(--main-color);
    border-radius: 10px;
    text-align: center;
    margin: 20px 0;
    cursor: pointer;
    animation: contactBounce 8s infinite forwards;
    transition: all 0.5s;
}

.contactMe:hover {
    background-color: var(--main-color);
    color: var(--main-background);
}

@keyframes contactBounce {
    40% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.1);
    }
    60% {
        transform: scale(1);
    }

}

.welcome_traits {
    position: absolute;
    top: 78%;
    left: 0;
    display: flex;
    justify-content: space-around;
    color: var(--main-color);
    font-size: var(--font-normal);
    width: 50%;

}

.passion {
    opacity: 0;
    animation: traitsLoading 2s 1 forwards;
    animation-delay: .3s;
}

.desire {
    opacity: 0;
    animation: traitsLoading 2s 1 forwards;
    animation-delay: .5s;
}

.patience {
    opacity: 0;
    animation: traitsLoading 2s 1 forwards;
    animation-delay: 1s;
}

.creativity {
    opacity: 0;
    animation: traitsLoading 2s 1 forwards;
    animation-delay: 1.5s;
}

.discipline {
    opacity: 0;
    animation: traitsLoading 2s 1 forwards;
    animation-delay: 2s;
}

@keyframes traitsLoading {
    10% {
        opacity: 0;
    }
    50% {
        opacity: 50%;
        transform: scale(.9);
    }
    100% {
        transform: scale(1);
        opacity: 100%;
    }
}

/*===== Welcome photo section =====*/




/*===== Media queries =====*/
@media (max-width: 1200px) {
    .welcome {
        flex-direction: column;
    }
    .welcome__gradient, .welcome_photo {
        width: 100%;
        height: 300px;
    }
    .hero {
        max-width: 23%;
    }
    .welcome_traits {
        top: 45%;
        width: 100%;
    }
}
@media (max-width: 768px) {
    .welcome_traits {
        font-size: 2vw;
    }
    .welcome_description {
        font-size: 2vw;
    }
    h1 {
        font-size: 3rem;
    }
    .welcome__gradient, .welcome_photo {
        height: 250px;
    }
    .contactMe {
        min-width: 100%;
    }
}

